Add link to blog site

--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@
   <body>
 
     <header class="header">
-      <img src="images/avatar.png" width="150" height="200" class="avatar" />
-      <h1>Hello, I'm Saroj Maharjan. <br /> A web developer from Kathmandu, Nepal.</h1>
+      <img src="images/avatar.png" width="150" height="200" class="avatar" alt='Saroj' />
+      <h1>
+        Hello, I'm <a href="https://sarojmaharjan.com/">Saroj Maharjan</a>.
+        <br />
+        A web developer from Kathmandu, Nepal.
+        <br />
+        <br />
+        You can read my blog posts at
+        <br />
+        <a href="https://sarojmaharjan.com/">https://SarojMaharjan.com/</a>
+      </h1>
     </header>
 <!--
     <section class="content">
